--- a/OlySmart/.classpath
+++ b/OlySmart/.classpath
@@ -9,11 +9,10 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container">
 		<attributes>
-			<attribute name="annotationpath" value="E:/mysql-connector-java-8.0.22.jar"/>
+			<attribute name="annotationpath" value="C:/Users/fatte/git/Olysmart_TSW2021/OlySmart/WebContent/WEB-INF/lib/mysql-connector-java-8.0.22.jar"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
-	<classpathentry kind="lib" path="E:/mysql-connector-java-8.0.22.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
