--- a/OlySmart/.settings/org.eclipse.core.resources.prefs
+++ b/OlySmart/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebContent/MyAccount.jsp=UTF-8
 encoding//WebContent/catalogo.jsp=UTF-8
+encoding//WebContent/register.jsp=UTF-8
