--- a/OlySmart/.classpath
+++ b/OlySmart/.classpath
@@ -9,7 +9,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container">
 		<attributes>
-			<attribute name="annotationpath" value="E:/mysql-connector-java-8.0.22.jar"/>
+			<attribute name="annotationpath" value="D:/mysql-connector-java-8.0.22.jar"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
